[gd_scene load_steps=13 format=2]

[ext_resource path="res://MainMenu/assets/main_menu/bg-color.png" type="Texture" id=1]
[ext_resource path="res://Game/GUI/assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://BikeMenu/assets/yes.png" type="Texture" id=3]
[ext_resource path="res://BikeMenu/assets/no.png" type="Texture" id=4]
[ext_resource path="res://Game/GUI/controls/assets/refit_car.png" type="Texture" id=5]
[ext_resource path="res://BikeMenu/Buttons/Current.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game/GUI/counter/RMCounter.tscn" type="PackedScene" id=7]
[ext_resource path="res://BikeMenu/BikeMenu.gd" type="Script" id=8]
[ext_resource path="res://Game/Bike/assets/I/collision.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 88
outline_size = 2
outline_color = Color( 0.4, 0.4, 0.4, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
outline_size = 1
outline_color = Color( 0.533333, 0.388235, 0.211765, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
length = 6.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SliderContainer/Detail/Image/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.02, 0.31, 0.56, 0.82, 1.07, 1.33, 2.05, 2.27, 2.55, 2.85, 3.37, 3.67, 3.92, 4.2, 4.45, 4.69, 4.94, 5.19, 5.43, 5.68, 5.94, 6.19, 6.43, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 1 ]
}

[node name="BikeMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1366.0
margin_bottom = 768.0
texture = ExtResource( 1 )

[node name="RMCounter" parent="TextureRect" instance=ExtResource( 7 )]
margin_left = 1236.46
margin_top = 25.0
margin_right = 1336.46
margin_bottom = 65.0

[node name="Title" type="Label" parent="TextureRect"]
margin_left = 25.8854
margin_top = 29.3583
margin_right = 722.885
margin_bottom = 128.358
custom_fonts/font = SubResource( 1 )
text = "Choose a bike: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 49.0
margin_top = 133.0
margin_right = 1328.0
margin_bottom = 719.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="TextureRect/SliderContainer"]
margin_right = 1279.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current" parent="TextureRect/SliderContainer/Buttons" instance=ExtResource( 6 )]

[node name="Sataur" parent="TextureRect/SliderContainer/Buttons" instance=ExtResource( 6 )]
margin_left = 224.0
margin_right = 444.0
text = "Sataur"

[node name="Drawster" parent="TextureRect/SliderContainer/Buttons" instance=ExtResource( 6 )]
margin_left = 448.0
margin_right = 668.0
text = "Drawster"

[node name="Detail" type="HBoxContainer" parent="TextureRect/SliderContainer"]
margin_top = 60.0
margin_right = 1279.0
margin_bottom = 420.0
alignment = 1

[node name="Image" type="CenterContainer" parent="TextureRect/SliderContainer/Detail"]
margin_right = 637.0
margin_bottom = 360.0
rect_min_size = Vector2( 600, 360 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="TextureRect/SliderContainer/Detail/Image"]
position = Vector2( 182.245, 14.8972 )
scale = Vector2( 1.4, 1.4 )
centered = false
hframes = 6
vframes = 4
frame = 22

[node name="EmptySprite" type="Sprite" parent="TextureRect/SliderContainer/Detail/Image"]
position = Vector2( 318.368, 196.225 )
texture = ExtResource( 9 )

[node name="MenuOptions" type="VBoxContainer" parent="TextureRect/SliderContainer/Detail"]
margin_left = 641.0
margin_right = 1279.0
margin_bottom = 360.0
rect_min_size = Vector2( 400, 360 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 2

[node name="MaxPower" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 60.0
margin_right = 638.0
margin_bottom = 120.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 2 )
text = "Max power: ....... 0"
align = 1
valign = 1

[node name="MaxSpeed" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 120.0
margin_right = 638.0
margin_bottom = 180.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 2 )
text = "Max speed: ....... 0"
align = 1
valign = 1

[node name="MaxJump" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 180.0
margin_right = 638.0
margin_bottom = 240.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 2 )
text = "Max jump: .......... 0	"
align = 1
valign = 1

[node name="Lives" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 240.0
margin_right = 638.0
margin_bottom = 300.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 2 )
text = "Lives: .................... 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 300.0
margin_right = 638.0
margin_bottom = 360.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 2 )
text = "Price: .................... 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="HBoxContainer" parent="TextureRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -213.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_pay" type="TouchScreenButton" parent="TextureRect/ButtonContainer"]
position = Vector2( 1163.04, 9.12265 )
normal = ExtResource( 3 )

[node name="btn_refit" type="TouchScreenButton" parent="TextureRect/ButtonContainer"]
position = Vector2( 622.368, 54.9706 )
scale = Vector2( 0.598312, 0.598312 )
normal = ExtResource( 5 )

[node name="btn_menu" type="TouchScreenButton" parent="TextureRect/ButtonContainer"]
position = Vector2( 5.42429, 4.24725 )
normal = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
autoplay = "demonstration"
anims/demonstration = SubResource( 3 )

[connection signal="button_down" from="TextureRect/SliderContainer/Buttons/Current" to="." method="_on_Current_button_down"]
[connection signal="pressed" from="TextureRect/SliderContainer/Buttons/Current" to="." method="_on_Current_pressed"]
[connection signal="pressed" from="TextureRect/SliderContainer/Buttons/Sataur" to="." method="_on_Sataur_pressed"]
[connection signal="pressed" from="TextureRect/SliderContainer/Buttons/Drawster" to="." method="_on_Drawster_pressed"]
[connection signal="pressed" from="TextureRect/ButtonContainer/btn_pay" to="." method="_on_btn_pay_pressed"]
[connection signal="released" from="TextureRect/ButtonContainer/btn_pay" to="." method="_on_btn_pay_released"]
[connection signal="pressed" from="TextureRect/ButtonContainer/btn_refit" to="." method="_on_btn_refit_pressed"]
[connection signal="released" from="TextureRect/ButtonContainer/btn_refit" to="." method="_on_btn_refit_released"]
[connection signal="pressed" from="TextureRect/ButtonContainer/btn_menu" to="." method="_on_btn_menu_pressed"]
